--- a/SimpleCache/SimpleCache.csproj
+++ b/SimpleCache/SimpleCache.csproj
@@ -48,6 +48,7 @@
     <Compile Include="IxCacheItem.cs" />
     <Compile Include="IxCacheItemFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample\CxElement.cs" />
     <Compile Include="Sample\CxFund.cs" />
     <Compile Include="Sample\CxFundFactory.cs" />
   </ItemGroup>
